[tool.poetry]
name = "hack-stop-code"
version = "0.1.0"
description = ""
authors = ["Bar Hochman <bhochman@paloaltonetworks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
